--- a/client/helpers/userPortrait.html
+++ b/client/helpers/userPortrait.html
@@ -1,3 +1,13 @@
 <template name="userPortrait">
-<img src="https://as.uky.edu/profile-picture/{{user.username}}" style="max-height: 40px; max-width: 100px" data-toggle="popover" data-placement="bottom" data-trigger="hover" tabindex="0" title="{{username}}" data-content="Name: {{user.displayName}}">
+<div class="user-profile">
+  <div class="user-picture">
+    <img src="https://as.uky.edu/profile-picture/{{user.username}}" class="{{class}}" alt="Photo of {{user.displayName}}" title="{{user.givenName}}">
+  </div>
+  <div class="user-info">
+    <div class="name">{{user.displayName}}</div>
+    <div class="email">{{user.mail}}</div>
+    <div class="department">{{user.department}}</div>
+    {{#if associated}}<div class="remove"><a href="#" data-action="removeUser">Remove</a></div>{{/if}}
+  </div>
+</div>
 </template>
