Add title to parsed time to show a full timestamp on hover.

--- a/client/helpers/parsers.html
+++ b/client/helpers/parsers.html
@@ -3,7 +3,7 @@
 </template>
 
 <template name="timeParser">
-{{parsedTime}}
+<span title="{{fullTime}}">{{parsedTime}}</span>
 </template>
 
 <template name="dateFormatter">
