Added user-status and collection-hooks packages. Fade users at top of queue view if not logged in.

--- a/client/helpers/userPortrait.html
+++ b/client/helpers/userPortrait.html
@@ -2,7 +2,7 @@
 {{#if user}}
 <div class="user-profile {{class}}">
   <div class="user-picture">
-    <img src="https://as.uky.edu/profile-picture/{{user.username}}" alt="Photo of {{user.displayName}}">
+    <img src="https://as.uky.edu/profile-picture/{{user.username}}" class="{{online}}" alt="Photo of {{user.displayName}}">
   </div>
   <div class="user-info">
     <div class="name">{{user.displayName}} ({{user.username}})</div>
