Add office address to user portrait.

--- a/client/helpers/userPortrait.html
+++ b/client/helpers/userPortrait.html
@@ -8,6 +8,7 @@
     <div class="name">{{user.displayName}} ({{user.username}})</div>
     <div class="email">{{user.mail}}</div>
     <div class="department">{{user.department}}</div>
+    <div class="address">{{user.physicalDeliveryOfficeName}}</div>
     {{#if associated}}<div class="remove"><a href="#" data-action="removeUser">Remove</a></div>{{/if}}
   </div>
 </div>
