Move hooks to after insert/update events. Make sure we're setting the write user on associated user updates/removes.

--- a/client/helpers/userPortrait.html
+++ b/client/helpers/userPortrait.html
@@ -9,7 +9,7 @@
     <div class="email">{{user.mail}}</div>
     <div class="department">{{user.department}}</div>
     <div class="address">{{user.physicalDeliveryOfficeName}}</div>
-    {{#if associated}}<div class="remove"><a href="#" data-action="removeUser">Remove</a></div>{{/if}}
+    {{#if associated}}<div class="remove"><a data-action="removeUser">Remove</a></div>{{/if}}
   </div>
 </div>
 {{/if}}
