--- a/client/helpers/parsers.html
+++ b/client/helpers/parsers.html
@@ -4,7 +4,7 @@
 
 <template name="timeParser">
 <div class="time">
-  {{livestamp date}}
+  {{parsedTime}}
   <div class="full-time">
     {{fullTime}}
   </div>
