Forgot to rename the template.

--- a/client/helpers/parsers.html
+++ b/client/helpers/parsers.html
@@ -2,7 +2,7 @@
 {{formattedTimestamp}}
 </template>
 
-<template name="timeParser">
+<template name="timeFromNow">
 <div class="time">
   {{parsedTime}}
   <div class="full-time">
