--- a/client/home.html
+++ b/client/home.html
@@ -1,7 +1,7 @@
 <head>
   <title>Triage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" sizes="32x32" href="/favion.png">
+  <link rel="icon" sizes="32x32" href="/favicon.png">
 </head>
 
 <body>
