Autocomplete custom statuses; some readability changes.

--- a/client/helpers/autocompletes.html
+++ b/client/helpers/autocompletes.html
@@ -1,11 +1,19 @@
 <template name="userPill">
-{{username}}
+  {{username}}
 </template>
 
 <template name="tagPill">
-#{{name}}
+  #{{name}}
 </template>
 
 <template name="noMatchTagPill">
-#{{getFilter}}
+  #{{getFilter}}
+</template>
+
+<template name="statusPill">
+  {{name}}
+</template>
+
+<template name="noMatchStatusPill">
+  {{getFilter}}
 </template>
