Autocomplete users in the 'on behalf of' field.

--- a/client/helpers/autocompletes.html
+++ b/client/helpers/autocompletes.html
@@ -25,3 +25,7 @@
 <template name="noMatchStatusPill">
   {{getFilter}}
 </template>
+
+<template name="noMatchUserPill">
+  Search AD for {{getFilter}}?
+</template>
