Add warning messages for IE8/IE9 users.

--- a/client/home.html
+++ b/client/home.html
@@ -1,5 +1,8 @@
 <head>
   <title>Triage</title>
+  <!--[if lt IE 9]>
+  You are using an unsupported browser. Please visit Triage in Chrome, Firefox, Safari, or Internet Explorer version 10 or newer.
+  <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" sizes="32x32" href="/favicon.png">
 </head>
