--- a/client/home.html
+++ b/client/home.html
@@ -4,6 +4,7 @@
   You are using an unsupported browser. Please visit Triage in Chrome, Firefox, Safari, or Internet Explorer version 10 or newer.
   <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="icon" sizes="32x32" href="/favicon.png">
 </head>
 
